FINALLY fixed the sizing issues. Also, I did some spacing and underlining to make it look nicer and bring attention to certain aspects

--- a/assignment.css
+++ b/assignment.css
@@ -239,10 +239,10 @@
 }
 
 .design-image {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  -max-width: 100%;
+  -max-height: 100%;
+  -width: auto;
+  -height: auto;
   transform-origin: top center;
 }
 
